# madruga.ai

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  MAKE_TEST_GREAT_AGAIN.md  Makefile  README.md  SECURITY.md  claude_best_practices.md  claude_md_best_practices.md  config.yaml  docker-compose.prod.yml  docker-compose.yml  madruga.ai.code-workspace  madruga_vs_claude_melhorias.md  operacao_assistida_1.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.claude/: README.md  settings.json  settings.local.json
.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.claude/knowledge/: architecture-portal-knowledge.md  commands.md  decision-classifier-knowledge.md  judge-config.yaml  likec4-syntax.md  pipeline-contract-base.md  pipeline-contract-business.md  pipeline-contract-engineering.md  pipeline-dag-knowledge.md  (+3 more)
.github/: CODEOWNERS  pull_request_template.md
.pipeline/: madruga.db  madruga.db.bak.1775337280  pipeline-status.json
.specify/: pipeline.yaml
docs/: ai-instructions-as-infrastructure.md  benchmark_repos.md  db-first-architecture.md  madruga-ai-vision.md  melhorias_base_GSD_BMAD.md  process_improvement.md  review.md  rtk.md
migrations/: 001_create_schema.sql  002_customers.sql  003_conversations.sql  003b_conversation_states.sql  004_messages.sql  005_agents_prompts.sql  006_eval_scores.sql  007_seed_data.sql
portal/: .gitignore  .size-limit.json  astro.config.mjs  journey-j001.mjs  package-lock.json  package.json  playwright.config.ts  setup.sh  smoke-shot.mjs  vitest.config.ts
prosauai/: main.py
research/: agentscope-analysis.md  agentscope-vs-madruga-comparison.md  everything-claude-code-analysis.md  everything-claude-code-vs-madruga-comparison.md  madruga_evolution_opportunities.md
scripts/: vision-build.py
tests/: test_dag_executor.py  test_db_gates.py  test_ensure_repo.py  test_implement_remote.py  test_worktree.py
(+357 files in other folders)
