[project]
name = "madruga-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "aiogram>=3.15",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
