[project]
name = "madruga-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "aiogram>=3.15",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.coverage.run]
source = [".specify/scripts"]
omit = [
    ".specify/scripts/tests/*",
    ".specify/scripts/conftest.py",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"
